NetBSD Problem Report #50526

From www@NetBSD.org  Fri Dec 11 09:46:24 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 01014A6661
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 09:46:24 +0000 (UTC)
Message-Id: <20151211094623.231C8A6680@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 09:46:23 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/evbarm/stand/boot2440/s3csdi.c:93: bad expression ?
X-Send-Pr-Version: www-1.0

>Number:         50526
>Category:       port-evbarm
>Synopsis:       src/sys/arch/evbarm/stand/boot2440/s3csdi.c:93: bad expression ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-evbarm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 11 09:50:00 +0000 2015
>Closed-Date:    Sun Dec 13 20:27:33 +0000 2015
>Last-Modified:  Sun Dec 13 20:27:33 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/arch/evbarm/stand/boot2440/s3csdi.c:93]: (style) Expression '(X & 0x100) == 0x1' is always false.

    if ( (data & (1<<8)) == 1) {

Wrong code on initial inspection. Suggest code rework.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50526 CVS commit: src/sys/arch/evbarm/stand/boot2440
Date: Sun, 13 Dec 2015 14:18:32 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec 13 19:18:32 UTC 2015

 Modified Files:
 	src/sys/arch/evbarm/stand/boot2440: s3csdi.c

 Log Message:
 PR/50526: David Binderman: Fix incorrect test


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/arch/evbarm/stand/boot2440/s3csdi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:27:33 +0000
State-Changed-Why:
christos fixed it.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.