PR/50526: David Binderman: Fix incorrect test